objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Converted Opps</fullName>
        <description>hold all stages for  historical conversion</description>
        <isActive>true</isActive>
        <values>
            <fullName>1-Discover</fullName>
        </values>
        <values>
            <fullName>2-Qualify</fullName>
        </values>
        <values>
            <fullName>3-Execute</fullName>
        </values>
        <values>
            <fullName>4-Propose</fullName>
        </values>
        <values>
            <fullName>5-Close</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>R1 RCM Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>1-Discover</fullName>
        </values>
        <values>
            <fullName>2-Qualify</fullName>
        </values>
        <values>
            <fullName>3-Execute</fullName>
        </values>
        <values>
            <fullName>4-Propose</fullName>
        </values>
        <values>
            <fullName>5-Close</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Closed%2FWalked</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ARR__c</fullName>
        <formula>Monthly_Subscription_Fee__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SCI - MRR * 12</inlineHelpText>
        <label>ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASPP_Payout_Date__c</fullName>
        <label>ASPP Payout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_to_DSO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field links the parent Account object to the child Opportunities (relabeled DSOs).</description>
        <inlineHelpText>This field links the parent Account object to the child Opportunities (relabeled DSOs).</inlineHelpText>
        <label>Account to DSO</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccruedUnApprovedExpenseTotal__c</fullName>
        <label>Accruing/Unpaid Expense Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Active_Directory_Survey_Status__c</fullName>
        <inlineHelpText>Survey required for Active Directory.  Please add as attachment when survey is received.</inlineHelpText>
        <label>Active Directory Survey Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Survey Sent</fullName>
                </value>
                <value>
                    <fullName>Survey Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Close_Date__c</fullName>
        <description>Set by Workflow</description>
        <label>Actual Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgeVelocity__c</fullName>
        <formula>IF( IsClosed  = false,
IF(RecordType.DeveloperName != "Enterprise",
if((Today()- DATEVALUE(CreatedDate))&lt;0.8*case(StageCount__c, 1, 45, 2, 90, 3, 150, 4, 180, 5, 225, 0),image("/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0682M00000SG7hb&amp;operationContext=CHATTER&amp;contentId=05T2M00001rC1yu", "green"),
if((Today()- DATEVALUE(CreatedDate)) &lt; case(StageCount__c, 1, 45, 2, 90, 3, 150, 4, 180, 5, 225, 0),IMAGE("/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0682M00000SG7j0&amp;operationContext=CHATTER&amp;contentId=05T2M00001rC24s","yellow"), 
Image("/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0682M00000SG7jK&amp;operationContext=CHATTER&amp;contentId=05T2M00001rC260", "red"))),""),"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>AV=Age Velocity - is this opportunity progressing along recommended timelines?  Flags opportunities based on current stage and days since created date.</inlineHelpText>
        <label>AV</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_PS_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this box is checked and Quote Request Status set to "Info Needed", an email alert and task will go out the Professional Services Manager on the Account Team.</inlineHelpText>
        <label>Alert PS Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Won__c</fullName>
        <description>To use for win rate formulas</description>
        <formula>If (IsWon, Amount,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Won-RETIRE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Yr_1__c</fullName>
        <label>Amount (Yr 1)- RETIRE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amt_Lost__c</fullName>
        <description>Not on page layout - used in reports to sum the total amount of "Closed Lost" opportunities. Set to native Amount field that is relabeled to "Amount (Yr 1)" if opportunity is lost.</description>
        <formula>IF (ISPICKVAL( StageName , "Closed Lost"),  Amount , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$ Lost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amt_No_Decision__c</fullName>
        <description>Not on page layout - used in reports to sum the total value of "Closed/Walked" opportunities. Set to native Amount field that is relabeled to "Amount (Yr 1)"  if opportunity is closed no decision.</description>
        <formula>IF (ISPICKVAL (StageName, "Closed/Walked"),  Amount , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$ No Decision/Walked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amt_Won__c</fullName>
        <description>Not on page layout - used in reports to sum the total value of "Closed Won" opportunities. Set to native Amount field that is relabeled to "Amount (Yr 1)" if opportunity is Closed Won decision.</description>
        <formula>IF ( IsWon ,  Amount , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$ Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Collections__c</fullName>
        <label>Annual Collections</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Increase__c</fullName>
        <defaultValue>0.03</defaultValue>
        <inlineHelpText>Percentage increase for additional contract years (if any). Will be used to calculate additional years amounts for SaaS, Hosting and Maintenance products, based on the Contract Term. (defaults to 3%)</inlineHelpText>
        <label>Annual Increase %</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Annual_Volume__c</fullName>
        <inlineHelpText>Annual number of visits, cases, transports, etc.</inlineHelpText>
        <label>Annual Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appeals_Cases_per_Month__c</fullName>
        <description>Appeals cases per month.</description>
        <inlineHelpText>Estimate the number of Appeals cases per month the client will send. If there is a backlog, factor that into your estimate.</inlineHelpText>
        <label>Appeals Cases per Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appeals_price_per_Case__c</fullName>
        <description>Appeals price per Case</description>
        <label>Appeals price per Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assigned_PS_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned PS Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BAA__c</fullName>
        <formula>IF(Q2C_BAA__c='Complete',"✔",
if(Q2C_BAA__c='Not Started','1-⭕', 
if(or(Q2C_BAA__c='None',isblank(Q2C_BAA__c)),'-', 
if(Q2C_BAA__c='Returned to Sales', '4-♻',
if(Q2C_BAA__c='Returned to Requester with Questions','4-❓',
if(Q2C_BAA__c='Returned to Requester for Client Alignment','4-♻',
if(Q2C_BAA__c='Submit for CBM Review','5-🚩',

if(Q2C_BAA__c='In Process','2-⚖',
if(Q2C_BAA__c='Submit for Functional Review','3-🔍',

'♻')))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BAA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bad_Close_Date__c</fullName>
        <formula>AND( Funnel_Type__c ="Long",  CloseDate &lt; Today() +30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Funnel Type is Long (1-Discover, 2-Qualify, 3-Execute) and close date is within 45 days then flag it as a bad close date because its too soon.</inlineHelpText>
        <label>Bad Close Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Big_Number_Annual_Value__c</fullName>
        <label>Big Number Annual Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Big_Number_quantified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Big Number quantified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Board_Building_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Board Building Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAD_System__c</fullName>
        <label>CAD System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aegis</fullName>
                </value>
                <value>
                    <fullName>Enroute 911</fullName>
                </value>
                <value>
                    <fullName>Flight Vector</fullName>
                </value>
                <value>
                    <fullName>Golden Hour</fullName>
                </value>
                <value>
                    <fullName>HSI</fullName>
                </value>
                <value>
                    <fullName>InterAct</fullName>
                </value>
                <value>
                    <fullName>Intergraph</fullName>
                </value>
                <value>
                    <fullName>Jeffbar</fullName>
                </value>
                <value>
                    <fullName>Medical Dispatch</fullName>
                </value>
                <value>
                    <fullName>Motorola</fullName>
                </value>
                <value>
                    <fullName>New World</fullName>
                </value>
                <value>
                    <fullName>Northrup Grumman - CommandPoint</fullName>
                </value>
                <value>
                    <fullName>Orion</fullName>
                </value>
                <value>
                    <fullName>Ortvis</fullName>
                </value>
                <value>
                    <fullName>OSSI</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>Southern Software</fullName>
                </value>
                <value>
                    <fullName>Spillman</fullName>
                </value>
                <value>
                    <fullName>Sunguard</fullName>
                </value>
                <value>
                    <fullName>SweetSoft</fullName>
                </value>
                <value>
                    <fullName>Tiburon</fullName>
                </value>
                <value>
                    <fullName>TIS</fullName>
                </value>
                <value>
                    <fullName>Traumasoft</fullName>
                </value>
                <value>
                    <fullName>Tri-Tech</fullName>
                </value>
                <value>
                    <fullName>WEBeoc</fullName>
                </value>
                <value>
                    <fullName>Zoll - RescueNet</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>CTS America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAP_Score__c</fullName>
        <inlineHelpText>The score will automatically be calculated when the Opportunity CAP responses are entered</inlineHelpText>
        <label>CAP Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Client Services Manager to be notified</inlineHelpText>
        <label>CSM</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Client Services, CSM</value>
            </filterItems>
            <infoMessage>Search for and select the Client Services Manager who should be involved with this deal.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CY_M12__c</fullName>
        <formula>IF(YEAR(Start_Date__c) = YEAR(TODAY()), 
CASE(MONTH( Start_Date__c), 
1, (Amount * Probability)/12, 
2, (Amount * Probability)/12, 
3, (Amount * Probability)/12, 
4, (Amount * Probability)/12, 
5, (Amount * Probability)/12, 
6, (Amount * Probability)/12, 
7, (Amount * Probability)/12, 
8, (Amount * Probability)/12, 
9, (Amount * Probability)/12 * 0.75, 
10,(Amount * Probability)/12 * 0.50, 
11,(Amount * Probability)/12 * 0.25, 
12,(Amount * Probability)/12 * 0.05, 0), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CY M12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C_U__c</fullName>
        <formula>IF( ISPICKVAL(Mgmt_Forecast__c, "Commit"),"C",
      IF (ISPICKVAL(Mgmt_Forecast__c, "Upside"),"U",
null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>C/U</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Amount_Yr_1_EMS__c</fullName>
        <description>0122M000001Im4G= EMS
EMS =  # of Billable Transports * Rev Per Unit  * Fee %</description>
        <formula>IF(RecordTypeId = "0122M000001Im4G", (of_Billable_Transports__c * Revenue_per_Unit__c *  Fee__c),0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>EMS =  # of Billable Transports * Rev Per Unit  * Fee %

was" IF(RecordTypeId = "0122M000001Im4G", (of_Billable_Transports__c * Revenue_per_Unit__c *  Fee__c),0.00)  removed IF</inlineHelpText>
        <label>Calculated Amount Yr 1 (EMS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Amount_Yr_1_Enterprise__c</fullName>
        <description>"01241000001QHOs" = IDN Enterprise
'If Partnership, $40M*NPR Billions*(1-Discount) + Setup/Implementation, If Co Managed $5M*NPR Billions*(1-Discount) + Setup/Implementation</description>
        <formula>IF(AND(RecordTypeId = "01241000001QHOs",  TEXT(Solution__c) = "Enterprise_Revenue_Cycle_Management_Full_Operating_Partnership"), ((40000000000* NPR_Billions__c *(1- Discount__c )) +  Setup_Implementation_Fees__c ),

IF(AND(RecordTypeId = "01241000001QHOs",  TEXT(Solution__c) = "Enterprise_Revenue_Cycle_Mgmt_Co_Managed_Partnership"), ((5000000*NPR_Billions__c *(1- Discount__c )) +  Setup_Implementation_Fees__c ),
0.00))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If  Solution = "Enterprise Revenue Cycle Management Full Operating Partnership", then $40M*NPR Billions*(1-Discount) + Setup/Impl Fee
If Solution = "Enterprise Revenue Cycle Mgmt Co-Managed", then $5M*NPR Billions*(1-Discount) + Setup/Impl Fee</inlineHelpText>
        <label>Calculated Amount Yr 1 (Enterprise)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Amount_Yr_1_HB__c</fullName>
        <description>0122M000001Im4H = Hospital Based Physician Services - corrected to be 0122M000001Im4K
HB = (Calculated Rev % Based or Cal Rev Fee Based--whichever is higher) + Urgent Care Rev</description>
        <formula>/*IF(AND(RecordTypeId = "0122M000001Im4H", IMX_Revenue_based__c &gt; IMX_Revenue_fee_per_unit__c  ),(IMX_Revenue_based__c +  UC_IMX_Revenue__c),
IF(AND(RecordTypeId = "0122M000001Im4H", IMX_Revenue_based__c &lt; IMX_Revenue_fee_per_unit__c  ),(IMX_Revenue_fee_per_unit__c +  UC_IMX_Revenue__c), 0.00))*/


IF(AND(RecordTypeId = "0122M000001Im4K", IMX_Revenue_based__c &gt; IMX_Revenue_fee_per_unit__c  ),(IMX_Revenue_based__c +  UC_IMX_Revenue__c),
IF(AND(RecordTypeId = "0122M000001Im4K", IMX_Revenue_based__c &lt;= IMX_Revenue_fee_per_unit__c  ),(IMX_Revenue_fee_per_unit__c +  UC_IMX_Revenue__c), 0.00))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>HB = (Calculated Rev % Based or Cal Rev Fee Based--whichever is higher) + Urgent Care Rev</inlineHelpText>
        <label>Calculated Amount Yr 1 (HB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Amount_Yr_1_Modular__c</fullName>
        <description>01241000001QHOt = Modular
(((Appeals Cases * Appeals Price) + (LOC Cases * LOC Price)+(RUR Cases * RUR Price)+(PTP Cases * PTP Price))*12)+Setup Fee  UNLESS Duration = 1, then use AMOUNT</description>
        <formula>IF (
AND(RecordTypeId = "01241000001QHOt",   TEXT( Solution__c )= "Physician Advisory Solutions", Duration__c &gt; 1),
((((Appeals_Cases_per_Month__c *  Appeals_price_per_Case__c )+( RUR_Cases_per_Month__c *  RUR_Price_per_Case__c )+( PTP_Cases_per_Month__c  *  PTP_price_per_case__c )+( LOC_Cases_per_Month_Est__c *  LOC_Price_per_Case__c ))*12)+Setup_Implementation_Fees__c), 

IF (
AND(RecordTypeId = "01241000001QHOt",  TEXT( Solution__c )= "Physician Advisory Solutions", Duration__c = 1),
Amount,

IF (
AND(RecordTypeId = "01241000001QHOt", TEXT( Solution__c )&lt;&gt; "Physician Advisory Solutions"),
Amount, Amount)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>01241000001QHOt = Modular
      (((Appeals Cases * Appeals Price) + (LOC Cases * LOC Price)+(RUR Cases * RUR Price)+(PTP Cases * PTP Price))*12)+Setup Fee  UNLESS Duration = 1, then use AMOUNT</inlineHelpText>
        <label>Calculated Amount Yr 1 (Modular)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Amount_Yr_1_OB__c</fullName>
        <description>0122M000001Im4I = Office Based Physician Services
OB = Annual collections + Setup/Impl Fee</description>
        <formula>IF(RecordTypeId = "0122M000001Im4I", (Annual_Collections__c + Setup_Implementation_Fees__c), 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>OB = Annual collections + Setup/Impl Fee</inlineHelpText>
        <label>Calculated Amount Yr 1 (OB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Amount_Yr_1_Optima__c</fullName>
        <description>0122M000001Im6H = Optima
Optima = Amount Yr 1 + Setup Fees</description>
        <formula>IF(RecordTypeId="0122M000001Im6H",  Amount +  Setup_Implementation_Fees__c,0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Optima = Amount Yr 1 + Setup Fees</inlineHelpText>
        <label>Calculated Amount Yr 1 (Optima)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Amount_Yr_1_Report__c</fullName>
        <description>Created to push the individual record type-sourced "Calculated Amount Year 1" fields into since the fields of origin (ie the individual formula fields) collectively exceed 5000 characters--a SF limit</description>
        <inlineHelpText>2019: Each "Calculated Amount Yr 1 (XX)" field pushes into this single field, which is used for reporting, by way of the "R1: Calculated Amount Yr 1" Process Builder</inlineHelpText>
        <label>Calculated Amount Yr 1 (Report)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Annual_Bookings__c</fullName>
        <formula>If (RecordType.DeveloperName = "Enterprise",
   NPR_Billions__c * IF( ISPICKVAL( Solution__c  ,
"Enterprise - Partnership (Enterprise)"),40000000,5000000),
IF( OR( NOT ISPICKVAL(Solution__c,"Modular - PAS (Modular)"),  EX_Needs_Cases__c =TRUE ),Amount,
IF(Duration__c = 1, Amount,   
((( Appeals_Cases_per_Month__c * Appeals_price_per_Case__c ) 
+( LOC_Cases_per_Month_Est__c * LOC_Price_per_Case__c ) 
+( RUR_Cases_per_Month__c * RUR_Price_per_Case__c ) 
+( PTP_Cases_per_Month__c * PTP_price_per_case__c )
) * 12)+SetUp_Fees__c)
)
)
*(1- Discount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>if duration &gt; 12, 12 months value, otherwise the full value
excludes setup fees</inlineHelpText>
        <label>Calculated Annual Bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Margin__c</fullName>
        <description>012n000000053vr = Hospital Based Physician Services
01241000001QHOt= Modular</description>
        <formula>IF ( RecordTypeId = "012n000000053vr", ( Calculated_Amount_Yr_1_HB__c  /
 ( Cost_Per_Unit__c  * ( Annual_Volume__c +  Urg_Care_Volume__c )))/100, 

   IF(RecordTypeId = "01241000001QHOt", (  Calculated_Amount_Yr_1_Modular__c /

(( Appeals_Cases_per_Month__c * 160 ) 
+( LOC_Cases_per_Month_Est__c * 100 )
+( RUR_Cases_per_Month__c * 35 )
+( PTP_Cases_per_Month__c * 135 )))/100 ,


0.00))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>HB = Calculated Amount Yr 1/(Cost Per Unit *(Annual Volume + Urgent Care Volume))
Modular = Calculated Amount Yr 1/(Cost Per Unit *Cases  by Type)</inlineHelpText>
        <label>Calculated Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Calculated_PAS_Margin__c</fullName>
        <formula>IF( AND( EX_Needs_Cases__c = FALSE,ISPICKVAL(Solution__c,"Modular - PAS (Modular)"), Duration__c &lt;&gt; 1),
(( Calculated_Annual_Bookings__c - SetUp_Fees__c -
(( Appeals_Cases_per_Month__c * 150 ) 
+( LOC_Cases_per_Month_Est__c * 100 ) 
+( RUR_Cases_per_Month__c * 30 ) 
+( PTP_Cases_per_Month__c * 125 )) 
* 12))/(Calculated_Annual_Bookings__c - SetUp_Fees__c)
 ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Caluclated Margin for PAS deals, using the current cost per case.  Sales Ops and Finance will review the costs semi annually.  This margin is then stored in another input field (Margin) to keep it consistent for historical reporting.</inlineHelpText>
        <label>Calculated PAS Margin- RETIRE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Calculated_This_Year_EMS__c</fullName>
        <description>EMS = 0122M000001Im4G
12 - Month(Start Date) * Calculated Amount Yr 1 (EMS)/12</description>
        <formula>IF( RecordTypeId = "0122M000001Im4G", ((12-MONTH( Start_Date__c ))*  Calculated_Amount_Yr_1_EMS__c /12), 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>12 - Month(Start Date) * Calculated Amount Yr 1 (EMS)/12</inlineHelpText>
        <label>Calculated This Year Revenue (EMS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_This_Year_Optima__c</fullName>
        <description>Optima = 0122M000001Im6H
12 - Month(Start Date) * Calculated Amount Yr 1 (Optima)/12</description>
        <formula>IF(RecordTypeId = "0122M000001Im6H",(12-MONTH( Start_Date__c )* (Calculated_Total_Contract_Amount_Optima__c/12)) , 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>12 - Month(Start Date) * Calculated Amount Yr 1 (Optima)/12</inlineHelpText>
        <label>Calculated This Year Revenue (Optima)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_This_Year_Revenue_Enterprise__c</fullName>
        <description>Enterprise = 01241000001QHOs</description>
        <formula>(Calculated_Amount_Yr_1_Enterprise__c /12) *  ThisYearRevenueMonths__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>12-MONTH(StartDate) * Calculated Amount Yr 1 (Enterprise)</inlineHelpText>
        <label>Calculated This Year Revenue(Enterprise)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_This_Year_Revenue_HB__c</fullName>
        <description>HB = 012n000000053vr
12 - Month(Start Date) * Calculated Amount Yr 1 (HB)/12</description>
        <formula>IF(RecordTypeId="0122M000001Im4H",(12-MONTH( Start_Date__c )* (Calculated_Amount_Yr_1_HB__c/12) ),0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>12 - Month(Start Date) * Calculated Amount Yr 1 (HB)/12</inlineHelpText>
        <label>Calculated This Year Revenue (HB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_This_Year_Revenue_Modular__c</fullName>
        <description>Modular = 01241000001QHOt
12-MONTH(StartDate) * Calculated Amount Yr 1 (Modular)/12</description>
        <formula>IF(RecordTypeId="01241000001QHOt",((12-MONTH( Start_Date__c ))* (Calculated_Amount_Yr_1_Modular__c/12) ),0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>12-MONTH(StartDate) * Calculated Amount Yr 1 (Modular)/12</inlineHelpText>
        <label>Calculated This Year Revenue (Modular)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_This_Year_Revenue_OB__c</fullName>
        <description>0122M000001Im4I = Office Based Physician Services
12 - Month(Start Date) * Calculated Amount Yr 1 (OB)/12</description>
        <formula>IF( RecordTypeId = "0122M000001Im4I", ((12-MONTH( Start_Date__c ))*  Calculated_Amount_Yr_1_OB__c  /12), 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>12 - Month(Start Date) * Calculated Amount Yr 1 (OB)/12</inlineHelpText>
        <label>Calculated This Year Revenue (OB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_This_Year_Revenue_Report__c</fullName>
        <description>Created to push the individual record type-sourced "Calculated This Year Revenue (XX)" fields into since the fields of origin (ie the individual formula fields) collectively exceed 5000 characters--a SF limit. 2019: Each "Calculated This Year Revenue (XX)" field pushes into this single field, which is used for reporting, by way of the "R1: Calculated Amount Yr 1" Process Builder (one PB triggers all three fields to get populated)</description>
        <inlineHelpText>Created to push the individual record type-sourced "Calculated This Year Revenue (XX)" fields into since the fields of origin (ie the individual formula fields) collectively exceed 5000 characters--a SF limit.</inlineHelpText>
        <label>Calculated This Year Revenue (Report)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_This_Year_Revenue__c</fullName>
        <formula>((ThisYearRevenueMonths__c * 
(IF ( Calculated_Annual_Bookings__c &gt;0 , Calculated_Annual_Bookings__c, Amount)/
IF( Duration__c &lt;12,Duration__c,12))))+ 
(If(AND (SetUp_Fees__c &gt; 0,ThisYearRevenueMonths__c &gt;0 ),SetUp_Fees__c, 0))</formula>
        <inlineHelpText>number of months for this year plus setup fees.  Will use duration if duration is less than 12</inlineHelpText>
        <label>Calculated This Year Revenue- RETIRE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Total_Contract_Amount_EMS__c</fullName>
        <description>(Calculated Amount Yr 1 (EMS)/12)*Duration</description>
        <formula>( Calculated_Amount_Yr_1_EMS__c /12)* Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Calculated Amount Yr 1 (EMS)/12)*Duration</inlineHelpText>
        <label>Calculated Total Contract Amount (EMS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Total_Contract_Amount_Enter__c</fullName>
        <description>(Calculated Amount Yr 1 (Enterprise)/12)*Duration</description>
        <formula>( Calculated_Amount_Yr_1_Enterprise__c /12)*Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Calculated Amount Yr 1 (Enterprise)/12)*Duration</inlineHelpText>
        <label>Calculated Total Contract Amount (Enter)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Total_Contract_Amount_HB__c</fullName>
        <description>(Calculated Amount Yr 1 (HB) /12) * Duration</description>
        <formula>( Calculated_Amount_Yr_1_HB__c /12)*  Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Calculated Amount Yr 1 (HB) /12) * Duration</inlineHelpText>
        <label>Calculated Total Contract Amount (HB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Total_Contract_Amount_Mod__c</fullName>
        <description>(Calculated Amount Yr 1 (Modular) /12)*Duration</description>
        <formula>( Calculated_Amount_Yr_1_Modular__c /12)*Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Calculated Amount Yr 1 (Modular) /12)*Duration</inlineHelpText>
        <label>Calculated Total Contract Amount (Mod)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Total_Contract_Amount_OB__c</fullName>
        <description>0122M000001Im4I = Office Based Physician Services
(Calculated Amount Yr 1 (OB) / 12 ) * Duration</description>
        <formula>(( Calculated_Amount_Yr_1_OB__c  /12)*  Duration__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Total Contract Amount (OB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Total_Contract_Amount_Optima__c</fullName>
        <description>(Calculated Amount Yr 1 (Optima)/12)*Duration</description>
        <formula>(Calculated_Amount_Yr_1_Optima__c /12) * Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Calculated Amount Yr 1 (Optima)/12)*Duration</inlineHelpText>
        <label>Calculated Total Contract Amount(Optima)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>